# biorempp

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .releaserc.json  AUTHORS.md  BIOREMPP_SIMPLIFIED_ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DISTRIBUTION_GUIDE.md  DOCUMENTATION.md  Dockerfile  LICENSE.txt  LOGGING_IMPROVEMENTS_SUMMARY.md  LOGGING_SYSTEM_DESIGN.md  MANIFEST.in  PYPI_TOKEN_SETUP_GUIDE.md  README.md  README_SCAFFOLD.md  RELEASE_CHECKLIST.md  RTD_DEBUGGING_GUIDE.md  RTD_DOCSTRINGS_SOLUTION.md  RTD_SUCCESS_CONFIRMATION.md  build_package.py  documentation_build_output.txt  documentation_warnings_priority_list.md  documentation_warnings_summary.txt  environment.yml  manual_test.py  package.json  prepare_release.py  pyproject.toml  release.config.js  rtd.md  setup.cfg  setup.py  test_integration.py  test_refactored.py  tox.ini
.github/workflows/: ci.yml  release.yml
configs/: logging_config.json  logging_config.yaml
custom_outputs/: BioRemPP_Results_20250807_010927.txt
docs/: API_Reference.md  DOCUMENTATION_BUILD_REPORT.md  DOCUMENTATION_GUIDE.md  Makefile  Test_Suite_Documentation.md  build_docs.ps1  changelog.md  conf.py  contributing.md  exemple_input.txt  fix_docstring_warnings.py  fix_rst_issues.py  fix_syntax_issues.py  index.md  logging_implementation_summary.md  logging_system.md  overview.md  pipeline_execution.md  practical_examples.py  readme.md  requirements.txt
notebooks/: BioRemPP_API_Technical_Demonstration.ipynb  BioRemPP_CLI_Technical_Demonstration.ipynb  biorempp_colab_demo.ipynb  biorempp_demo.ipynb  template.ipynb  visualizações_biorempp.ipynb
scripts/: .pypirc_template  DOCUMENTACAO_SCRIPTS_PYPI.md  PYPI_SETUP_GUIDE.md  README_SCRIPTS.md  VALIDATION_CHECKLIST.md  build_release.py  configure_pypi.py  create_pypirc.py  distribute.py  pypi_manager.py  pypirc_example  release.py  test_distribution.py  train_model.py  upload-to-testpypi.ps1  upload_to_testpypi.py
src/biorempp/: __init__.py  __main__.py  main.py  test_biorempp_pipeline.py
src/biorempp/analysis/: __init__.py  base_processor.py  gene_pathway_analysis.py  gene_pathway_analysis_plotter.py  gene_pathway_analysis_processing.py  interaction_sample_compound_.py  module_registry.py  sample_compound_interaction_processing.py
src/biorempp/analysis/gene_pathway_analysis/: __init__.py
src/biorempp/app/: __init__.py  application.py  command_factory.py
src/biorempp/cli/: __init__.py  argument_parser.py  output_formatter.py
src/biorempp/commands/: __init__.py  all_databases_command.py  all_merger_command.py  base_command.py  info_command.py  merger_command.py  modular_command.py  single_merger_command.py  traditional_command.py
src/biorempp/data/: database_biorempp.csv  database_hadeg.csv  database_toxcsm.csv  kegg_degradation_pathways.csv  sample_data.txt
src/biorempp/input_processing/: __init__.py  biorempp_merge_processing.py  hadeg_merge_processing.py  input_loader.py  input_validator.py  kegg_merge_processing.py  toxcsm_merge_processing.py
src/biorempp/pipelines/: __init__.py  input_processing.py  modular_processing.py  plot_processing.py  processing_post_merge.py
src/biorempp/utils/: __init__.py  enhanced_errors.py  enhanced_logging.py  enhanced_user_feedback.py  error_handler.py  io_utils.py  logging_config.py  post_merge_reader.py  silent_logging.py  user_feedback.py
tests/: conftest.py
tests/analysis/entity_interactions/: test_sample_compound_interaction_processing.py
tests/analysis/gene_pathway_analysis/: test_gene_pathway_analysis.py
tests/app/: __init__.py  test_application.py  test_command_factory.py
tests/cli/: __init__.py  test_argument_parser.py  test_output_formatter.py
tests/commands/: __init__.py  test_all_merger_command.py  test_base_command.py  test_info_command.py  test_single_merger_command.py
tests/input_processing/: test_hadeg_merge_processing.py  test_input_loader.py  test_input_validator.py  test_kegg_merge_processing.py  test_merge_input_with_database.py  test_toxcsm_merge_processing.py
tests/main/: test_main.py
tests/pipelines/: __init__.py  test_input_processing.py
tests/utils/: test_enhanced_errors.py  test_enhanced_logging.py  test_enhanced_user_feedback.py  test_error_handler.py  test_io_utils.py  test_post_merge_reader.py  test_user_feedback.py
