[build-system]
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
# Gera cobertura em XML para o Codecov e mantém o relatório no terminal
addopts = [
  "--cov=biorempp",
  "--cov-report=term-missing",
  "--cov-report=xml"
]
