[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
# Gera cobertura em XML para o Codecov e mantém o relatório no terminal
addopts = [
  "--cov=biorempp",
  "--cov-report=term-missing",
  "--cov-report=xml"
]
