[metadata]
name = biorempp
description = The Bioremediation Potential Profile (BioRemPP) is designed to explore the biotechnological potential of microbial, fungal, and plant genomes for bioremediation purposes
author = Douglas Felipe
author_email = biorempp@gmail.com
license = Proprietary
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/DougFelipe/biorempp
project_urls =
    Documentation = https://your-docs-url.example
    Source = https://github.com/DougFelipe/biorempp
    Changelog = https://github.com/DougFelipe/biorempp/releases

platforms = any
classifiers =
    Development Status :: 4 - Beta
    License :: Other/Proprietary License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    = src
python_requires = >=3.8
install_requires =
    pandas>=2.0.0,<3.0.0
    numpy>=1.21.0,<2.0.0
    tqdm
    click

[options.packages.find]
where = src
exclude =
    tests
    docs
    outputs
    custom_outputs

[options.package_data]
biorempp =
    data/*.csv
    data/*.txt

[options.extras_require]
dev =
    pre-commit
    sphinx
    myst-parser
    black
    jupyterlab
    nbdime
    nbstripout
    tox

testing =
    setuptools
    pytest
    pytest-cov
    pandas

[options.entry_points]
console_scripts =
    biorempp = biorempp.main:main
